<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText android:id="@+id/emailField"
        android:hint="@string/hint_user_id"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText android:id="@+id/passwordField"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/emailPasswordButtons"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button android:id="@+id/emailCreateAccountButton"
            android:text="@string/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button android:id="@+id/emailSignInButton"
            android:text="@string/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/signedInButtons"
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button android:id="@+id/signOutButton"
            android:text="@string/sign_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button android:id="@+id/verifyEmailButton"
            android:text="@string/verify_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView android:id="@+id/statusTextView"
        android:text="@string/signed_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView android:id="@+id/detailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
